--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -39,23 +39,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sequence:     [0.   0.39 0.13 0.26 0.52]\n",
-      "neg start 1:  []\n",
-      "neg end 1     []\n",
-      "pos start 1:  [ 775  876  890  983 1023 1136]\n",
-      "pos end 1:    [ 818  888  906 1015 1046 1151]\n",
-      "neg start 2:  [1061 1152]\n",
-      "neg end 2     [1089 1234]\n",
-      "pos start 2:  [ 834  925 1115 1278]\n",
-      "pos end 2:    [ 866  962 1134 1404]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_data(i, seqs, labels):\n",
     "    # sequence\n",
@@ -96,19 +80,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sequence:   [0.   4.78 5.2  5.06 4.7  4.88 2.33 1.51 8.   2.25 1.83]\n",
-      "neg start:  [2, 7]\n",
-      "neg end     [3, 9]\n",
-      "pos start:  [4]\n",
-      "pos end:    [6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generate toy data: sequence, labels\n",
     "def gen_toy_data():\n",
@@ -151,17 +123,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cumsum vector: [ 0.    0.    4.78  9.98 15.04 19.74 24.62 26.95 28.47 36.47 38.72 40.55]\n",
-      "cumsum square: [  0.     0.    22.88  49.91  75.48  97.56 121.41 126.84 129.14 193.14\n",
-      " 198.22 201.55]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get cumulative sum vectors\n",
     "def get_cumsum(sequence):\n",
@@ -183,19 +145,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sequence    :  [0.   4.78 5.2  5.06 4.7  4.88 2.33 1.51 8.   2.25 1.83]\n",
-      "from 1 to 1 :  0.0\n",
-      "from 1 to 2 :  0.08677578448781986\n",
-      "from 5 to 6 :  3.2614392081723373\n",
-      "from 1 to 10:  37.14793999709528\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# function to create loss value from 'start' to 'end' given cumulative sum vector y (data) and z (square)\n",
     "def L(start, end, y, z):\n",
@@ -216,16 +166,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  1  2  3  4  5  6  7  8  9 10]\n",
-      "[ 0  5 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# function to get the list of changepoint from vector tau_star\n",
     "def trace_back(tau_star):\n",
@@ -243,96 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function to get the mean vector of the sequence from the list of changepoint\n",
-    "def get_mean(y, chpnt):\n",
-    "    mean = np.zeros(len(y)-1)\n",
-    "    for i in range(len(chpnt)-1):\n",
-    "        mean[chpnt[i]+1:chpnt[i+1]+1] = (y[chpnt[i+1]+1] - y[chpnt[i]+1])/(chpnt[i+1] - chpnt[i])\n",
-    "    return mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sequence:   [0.   4.86 4.98 5.3  4.87 4.91 1.91 2.44 8.   2.2  2.08]\n",
-      "neg start:  [2, 7]\n",
-      "neg end     [3, 9]\n",
-      "pos start:  [4]\n",
-      "pos end:    [6]\n",
-      "T: [[], [0], [0, 1], [0, 1], [0, 1, 3], [0, 1, 3], [4, 5], [4, 5, 6], [4, 5, 6], [4, 5, 6], [4, 5, 6, 9]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# function to get T - set of possible changepoint wrt each position\n",
-    "def get_T(sequence_length, neg_start, neg_end, pos_start, pos_end):\n",
-    "    T = []\n",
-    "    T.append([])\n",
-    "\n",
-    "    for i in range(1, sequence_length+1):\n",
-    "        tag = 'otherwise'\n",
-    "        for s, e in zip(neg_start, neg_end):\n",
-    "            if(s < i <= e):\n",
-    "                tag = 'inside region'\n",
-    "\n",
-    "        for s, e in zip(pos_start, pos_end):\n",
-    "            if(s < i < e):\n",
-    "                tag = 'inside region'\n",
-    "            elif(i == e):\n",
-    "                tag = 'out positive'\n",
-    "                s_pos = s\n",
-    "                e_pos = e\n",
-    "\n",
-    "        match tag:\n",
-    "            case \"inside region\":\n",
-    "                T.append(T[i-1])\n",
-    "            case \"out positive\":\n",
-    "                T.append(list(range(s_pos, e_pos)))\n",
-    "            case \"otherwise\":\n",
-    "                T.append(T[i-1]+[i-1])\n",
-    "\n",
-    "    return T\n",
-    "\n",
-    "# # test\n",
-    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
-    "# print(\"sequence:  \", toy_sequence)\n",
-    "# print(\"neg start: \", neg_start)\n",
-    "# print(\"neg end    \", neg_end)\n",
-    "# print(\"pos start: \", pos_start)\n",
-    "# print(\"pos end:   \", pos_end)\n",
-    "\n",
-    "# T = get_T(len(toy_sequence) - 1, neg_start, neg_end, pos_start, pos_end)\n",
-    "# print(\"T:\", T)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "neg start:  [2, 7]\n",
-      "neg end     [3, 9]\n",
-      "pos start:  [4]\n",
-      "pos end:    [6]\n",
-      "[0, 3, 5, 6, 9, 10]    : (0, 0)\n",
-      "[0, 1, 2, 6, 8, 9, 10] : (2, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# counting errors\n",
     "def count_items_between(lst, a, b):\n",
@@ -370,70 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function to plot sequence with labels and changepoints wrt lambda (if provided)\n",
-    "from plotnine import *\n",
-    "\n",
-    "def plot_sequence(sequence, neg_start, neg_end, pos_start, pos_end, algorithm='LOPART', chpnt=None, mean=None, lda=None):\n",
-    "    sequence = sequence[1:]\n",
-    "\n",
-    "    # Prepare data for plotnine\n",
-    "    data = pd.DataFrame({'point': range(1, len(sequence)+1), 'value': sequence})\n",
-    "\n",
-    "    # Create the plot\n",
-    "    plot = (\n",
-    "        ggplot(data, aes(x='point', y='value')) +\n",
-    "        theme_minimal() +\n",
-    "        labs(x='point', y='value') +\n",
-    "        xlim(0, len(sequence) + 1) +\n",
-    "        ylim(np.min(sequence) - 1, np.max(sequence) + 1)\n",
-    "    )\n",
-    "\n",
-    "    # Add negative regions\n",
-    "    for start, end in zip(neg_start, neg_end):\n",
-    "        plot += geom_rect(aes(xmin=start, xmax=end, ymin=np.min(sequence) - 1, ymax=np.max(sequence) + 1),\n",
-    "                          fill='pink', alpha=0.2, color='black', size=0)\n",
-    "\n",
-    "    # Add positive regions\n",
-    "    for start, end in zip(pos_start, pos_end):\n",
-    "        plot += geom_rect(aes(xmin=start, xmax=end, ymin=np.min(sequence) - 1, ymax=np.max(sequence) + 1),\n",
-    "                          fill='red', alpha=0.2, color='black', size=0)\n",
-    "\n",
-    "    # Add data points\n",
-    "    plot += geom_point(color='blue', size=2, alpha=0.7)\n",
-    "\n",
-    "    # Add mean line\n",
-    "    if mean is not None:\n",
-    "        mean = mean[1:]\n",
-    "        for i in range(len(chpnt) - 1):\n",
-    "            plot += geom_segment(aes(x=chpnt[i]+0.5, y=mean[chpnt[i]], xend=chpnt[i+1]+0.5, yend=mean[chpnt[i]]),\n",
-    "                            color='green', size=1, alpha=0.7)\n",
-    "    # Add changepoint\n",
-    "    if chpnt is not None:\n",
-    "        for i in range(1, len(chpnt)-1):\n",
-    "            plot += geom_vline(xintercept=chpnt[i]+0.5, linetype='dashed', color='deepskyblue', alpha=0.8)\n",
-    "\n",
-    "    # Set the figure title\n",
-    "    if lda is not None:\n",
-    "        plot += ggtitle(algorithm + ' -- lambda = ' + str(lda) + ' -- errors = ' + str(sum(error_count(chpnt, neg_start, neg_end, pos_start, pos_end))))\n",
-    "\n",
-    "    # Center the title horizontally\n",
-    "        plot += theme(plot_title=element_text(hjust=0.5))\n",
-    "\n",
-    "    # Add legend\n",
-    "    plot += labs(color=\"Legend\")  # Legend title\n",
-    "    plot += guides(color=guide_legend(title=\"Legend\"))  # Legend label\n",
-    "\n",
-    "    # return the plot\n",
-    "    return plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,22 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lambda =    0: [ 0  1  2  3  4  5  6  7  8  9 10]\n",
-      "lambda =   10: [ 0  5  7  8 10]\n",
-      "lambda =  100: [ 0 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# OPART given lambda, sequence, y and z\n",
-    "def opart(lda, sequence, y, z):\n",
+    "# OPART given lambda and sequence\n",
+    "def opart(lda, sequence):\n",
+    "\n",
+    "    # cumsum vector:\n",
+    "    y, z = get_cumsum(sequence)\n",
+    "\n",
+    "    # length of sequence\n",
     "    sequence_length = len(sequence)-1\n",
     "\n",
     "    # Set up\n",
@@ -503,19 +289,59 @@
     "# # test\n",
     "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
     "# sequence_length = len(toy_sequence) - 1\n",
-    "# y, z = get_cumsum(toy_sequence)\n",
     "# for lda in [0, 10, 100]:\n",
-    "#     print(\"lambda = %4d: %s\" % (lda, opart(lda, toy_sequence, y, z)))"
+    "#     print(\"lambda = %4d: %s\" % (lda, opart(lda, toy_sequence)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_T(t, neg_start, neg_end, pos_start, pos_end): \n",
+    "\n",
+    "    # if t is just outside of pos region\n",
+    "    for s, e in zip(pos_start, pos_end):\n",
+    "        if(t == e):\n",
+    "            T = np.arange(s, e)\n",
+    "            return T\n",
+    "    \n",
+    "    # initiate T = [0, ..., t]\n",
+    "    T = np.arange(t)\n",
+    "    \n",
+    "    # remove negative regions\n",
+    "    for s, e in zip(neg_start, neg_end):\n",
+    "        T = T[(T < s) | (T >= e)]\n",
+    "    \n",
+    "    # remove positive regions with t > end and t > start\n",
+    "    for s, e in zip(pos_start, pos_end):\n",
+    "        if(t < e):\n",
+    "            T = T[(T < s)]\n",
+    "        else:\n",
+    "            T = T[(T >= s)]\n",
+    "    \n",
+    "    return T\n",
+    "\n",
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "\n",
+    "# for t in range(11):\n",
+    "#     print(get_T(t, neg_start, neg_end, pos_start, pos_end))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# lopart dynamic algorithm return set of changepoints given lambda, T (set of possible changepoints), sequence, and cumsum vectors\n",
-    "def lopart(lda, T, sequence, y, z):\n",
+    "def lopart(sequence, neg_start, neg_end, pos_start, pos_end, lda):\n",
+    "    # cumsum vector\n",
+    "    y, z = get_cumsum(sequence)\n",
+    "    \n",
+    "    # sequence length\n",
     "    sequence_length = len(sequence)-1\n",
     "\n",
     "    # Set up\n",
@@ -527,18 +353,19 @@
     "    for t in range(1, sequence_length+1):\n",
     "\n",
     "        # get set of possible changepoint\n",
-    "        po_chpnt = T[t]\n",
+    "        po_chpnt = get_T(t, neg_start, neg_end, pos_start, pos_end)\n",
     "\n",
     "        # get set of possible value\n",
-    "        V = np.inf * np.ones(sequence_length+1)\n",
-    "        for j in po_chpnt:\n",
-    "            V[j] = C[j] + lda + L(j+1, t, y, z)\n",
-    "\n",
+    "        # V = np.inf * np.ones(sequence_length+1)\n",
+    "        # for j in po_chpnt:\n",
+    "        #     V[j] = C[j] + lda + L(j+1, t, y, z)\n",
+    "        V = C[po_chpnt] + lda + L(1 + po_chpnt, t, y, z)\n",
+    "        \n",
     "        # get optimal tau from set V\n",
-    "        last_chpnt = np.argmin(V)\n",
+    "        last_chpnt = po_chpnt[np.argmin(V)]\n",
     "\n",
     "        # update C_i\n",
-    "        C[t] = V[last_chpnt]\n",
+    "        C[t] = V[np.argmin(V)]\n",
     "\n",
     "        # update tau_star\n",
     "        tau_star[t] = last_chpnt\n",
@@ -546,7 +373,104 @@
     "    # get set of changepoints\n",
     "    set_of_chpnt = trace_back(tau_star[1:])\n",
     "\n",
-    "    return set_of_chpnt"
+    "    return set_of_chpnt\n",
+    "\n",
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "# sequence_length = len(toy_sequence) - 1\n",
+    "# y, z = get_cumsum(toy_sequence)\n",
+    "# for lda in [0, 1, 10]:\n",
+    "#     print(\"lambda = %4d: %s\" % (lda, lopart(toy_sequence, neg_start, neg_end, pos_start, pos_end, lda)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to get the mean vector of the sequence from the list of changepoint\n",
+    "def get_mean(y, chpnt):\n",
+    "    mean = np.zeros(len(y)-1)\n",
+    "    for i in range(len(chpnt)-1):\n",
+    "        mean[chpnt[i]+1:chpnt[i+1]+1] = (y[chpnt[i+1]+1] - y[chpnt[i]+1])/(chpnt[i+1] - chpnt[i])\n",
+    "    return mean\n",
+    "\n",
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "# y, z = get_cumsum(toy_sequence)\n",
+    "# chpnt = lopart(toy_sequence, neg_start, neg_end, pos_start, pos_end, lda=0)\n",
+    "# print(get_mean(y, chpnt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to plot sequence with labels and changepoints wrt lambda (if provided)\n",
+    "from plotnine import *\n",
+    "\n",
+    "def plot_sequence(sequence, neg_start, neg_end, pos_start, pos_end, algorithm='LOPART', chpnt=None, lda=None):\n",
+    "    y = get_cumsum(sequence)[0]\n",
+    "    sequence = sequence[1:]\n",
+    "\n",
+    "    # Prepare data for plotnine\n",
+    "    data = pd.DataFrame({'point': range(1, len(sequence)+1), 'value': sequence})\n",
+    "\n",
+    "    # Create the plot\n",
+    "    plot = (\n",
+    "        ggplot(data, aes(x='point', y='value')) +\n",
+    "        theme_minimal() +\n",
+    "        labs(x='point', y='value') +\n",
+    "        xlim(0, len(sequence) + 1) +\n",
+    "        ylim(np.min(sequence) - 1, np.max(sequence) + 1)\n",
+    "    )\n",
+    "\n",
+    "    # Add negative regions\n",
+    "    for start, end in zip(neg_start, neg_end):\n",
+    "        plot += geom_rect(aes(xmin=start, xmax=end, ymin=np.min(sequence) - 1, ymax=np.max(sequence) + 1),\n",
+    "                          fill='pink', alpha=0.2, color='black', size=0)\n",
+    "\n",
+    "    # Add positive regions\n",
+    "    for start, end in zip(pos_start, pos_end):\n",
+    "        plot += geom_rect(aes(xmin=start, xmax=end, ymin=np.min(sequence) - 1, ymax=np.max(sequence) + 1),\n",
+    "                          fill='red', alpha=0.2, color='black', size=0)\n",
+    "\n",
+    "    # Add data points\n",
+    "    plot += geom_point(color='blue', size=2, alpha=0.7)\n",
+    "    \n",
+    "    # Add changepoint\n",
+    "    if chpnt is not None:\n",
+    "        for i in range(1, len(chpnt)-1):\n",
+    "            plot += geom_vline(xintercept=chpnt[i]+0.5, linetype='dashed', color='deepskyblue', alpha=0.8)  \n",
+    "\n",
+    "        mean = get_mean(y, chpnt)[1:]\n",
+    "        for i in range(len(chpnt) - 1):\n",
+    "            plot += geom_segment(aes(x=chpnt[i]+0.5, y=mean[chpnt[i]], xend=chpnt[i+1]+0.5, yend=mean[chpnt[i]]),\n",
+    "                            color='green', size=1, alpha=0.7)\n",
+    "\n",
+    "    # Set the figure title\n",
+    "    if lda is not None:\n",
+    "        plot += ggtitle(algorithm + ' -- lambda = ' + str(lda) + ' -- errors = ' + str(sum(error_count(chpnt, neg_start, neg_end, pos_start, pos_end))))\n",
+    "\n",
+    "    # Center the title horizontally\n",
+    "        plot += theme(plot_title=element_text(hjust=0.5))\n",
+    "\n",
+    "    # Add legend\n",
+    "    plot += labs(color=\"Legend\")  # Legend title\n",
+    "    plot += guides(color=guide_legend(title=\"Legend\"))  # Legend label\n",
+    "\n",
+    "    # return the plot\n",
+    "    return plot\n",
+    "\n",
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "\n",
+    "# for lda in [0, 1]:\n",
+    "#     chpnt = lopart(toy_sequence, neg_start, neg_end, pos_start, pos_end, lda)\n",
+    "#     print(plot_sequence(toy_sequence, neg_start, neg_end, pos_start, pos_end, 'LOPART', chpnt, lda))"
    ]
   }
  ],
