--- a/OPART.ipynb
+++ b/OPART.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# IMPORT\n",
     "from joblib import Parallel, delayed\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, error_count, write_to_csv, opart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def try_lambda(i):\n",
     "    lda = ldas[i]\n",
-    "    chpnt = opart(lda, sequence, y, z)\n",
+    "    chpnt = opart(lda, sequence)\n",
     "    err_1 = error_count(chpnt, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
     "    return err_1, err_2\n",
@@ -36,16 +36,13 @@
     "        # generate data\n",
     "        sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
     "\n",
-    "        # vectors of cumulative sums\n",
-    "        y, z = get_cumsum(sequence)\n",
-    "\n",
     "        # run each lambda and record it into csv file\n",
     "        row  = [i]\n",
-    "        errs = Parallel(n_jobs=4)(delayed(try_lambda)(i) for i in range(0, 21))\n",
+    "        errs = Parallel(n_jobs=6)(delayed(try_lambda)(i) for i in range(0, 21))\n",
     "        row += errs\n",
     "\n",
     "        header = ['sequenceID','-5','-4.5','-4','-3.5','-3','-2.5','-2','-1.5','-1','-0.5','0','0.5','1','1.5','2','2.5','3','3.5','4','4.5','5']\n",
-    "        write_to_csv('learning_data/errors_test.csv', header, row)"
+    "        write_to_csv('learning_data/errors.csv', header, row)"
    ]
   }
  ],
