--- a/test_everything.ipynb
+++ b/test_everything.ipynb
@@ -12,21 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.3127,  0.5798,  0.0979],\n",
-      "        [-0.4454, -0.5373, -0.1473]])\n",
-      "tensor([[-0.4811,  0.4856],\n",
-      "        [-0.6226,  0.1770]])\n",
-      "tensor([[-0.4968,  0.0646],\n",
-      "        [ 0.6541, -0.1710]])\n",
-      "tensor([[-0.4524, -0.5419],\n",
-      "        [ 0.6132,  0.0794]])\n"
+      "tensor([[ 0.2826, -0.3373,  0.2062],\n",
+      "        [-0.3126, -0.6534, -0.6177]])\n",
+      "tensor([[-0.1035, -0.0665],\n",
+      "        [-0.6990,  0.0839]])\n",
+      "tensor([[ 0.3240,  0.0997],\n",
+      "        [-0.1140, -0.3130]])\n",
+      "tensor([[-0.1855, -0.1067],\n",
+      "        [ 0.5084, -0.3747]])\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -53,25 +53,23 @@
       " [Parameter containing:\n",
       "tensor([[1.],\n",
       "        [2.]], requires_grad=True), Parameter containing:\n",
-      "tensor([[1., 2.],\n",
-      "        [1., 1.]], requires_grad=True)]\n",
+      "tensor([[0., 0.],\n",
+      "        [0., 0.]], requires_grad=True)]\n",
       "\n",
       "- hidden features weight:\n",
       " [Parameter containing:\n",
-      "tensor([[1., 1.],\n",
+      "tensor([[1., 0.],\n",
       "        [2., 1.]], requires_grad=True), Parameter containing:\n",
-      "tensor([[1., 1.],\n",
-      "        [1., 1.]], requires_grad=True)]\n",
+      "tensor([[0., 0.],\n",
+      "        [0., 0.]], requires_grad=True)]\n",
       "\n",
       "- output:\n",
-      " tensor([[  3.,   4.],\n",
-      "        [ 21.,  28.],\n",
-      "        [ 93., 117.],\n",
-      "        [330., 398.]], grad_fn=<SqueezeBackward1>)\n",
+      " tensor([[1., 4.],\n",
+      "        [2., 8.]], grad_fn=<SqueezeBackward1>)\n",
       "\n",
       "- last hidden:\n",
-      " tensor([[ 68.,  52.],\n",
-      "        [330., 398.]], grad_fn=<SqueezeBackward1>)\n"
+      " tensor([[2., 4.],\n",
+      "        [2., 8.]], grad_fn=<SqueezeBackward1>)\n"
      ]
     }
    ],
@@ -83,13 +81,15 @@
     "\n",
     "# Set the weights for the first layer\n",
     "rnn.weight_ih_l0.data = torch.tensor([[1.0],[2.0]])\n",
-    "rnn.weight_ih_l1.data = torch.tensor([[1.0, 1.0], [2.0, 1.0]])\n",
+    "rnn.weight_ih_l1.data = torch.tensor([[1.0, 0.0], [2.0, 1.0]])\n",
     "\n",
-    "rnn.weight_hh_l0.data = torch.tensor([[1.0, 2.0], [1.0, 1.0]])\n",
-    "rnn.weight_hh_l1.data = torch.tensor([[1.0, 1.0], [1.0, 1.0]])\n",
+    "rnn.weight_hh_l0.data = torch.tensor([[0.0, 0.0], [0.0, 0.0]])\n",
+    "rnn.weight_hh_l1.data = torch.tensor([[0.0, 0.0], [0.0, 0.0]])\n",
     "\n",
-    "input = torch.arange(1, 5).view(4, 1).float()\n",
-    "output, hn = rnn(input)\n",
+    "input = torch.arange(1, 3).view(2, 1).float()\n",
+    "\n",
+    "h0 = torch.tensor([[0.0, 0.0], [0.0, 0.0]])\n",
+    "output, hn = rnn(input, h0)\n",
     "\n",
     "# print\n",
     "print(\"- state weight:\\n\", rnn.all_weights[0])\n",
