--- a/lambda_learning_RNN.ipynb
+++ b/lambda_learning_RNN.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x16e755b7330>"
+       "<torch._C.Generator at 0x1d9d706fcd0>"
       ]
      },
      "execution_count": 1,
@@ -50,24 +50,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize_data(data):\n",
-    "    mean = data.mean(dim=0)\n",
-    "    std  = data.std(dim=0)\n",
-    "    norm_data = (data - mean) / std\n",
-    "    return norm_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data\n",
-    "chosen_feature = ['std_deviation', 'count', 'sum_diff']\n",
-    "data = torch.FloatTensor(pd.read_csv('learning_data/seq_features.csv').iloc[:, 1:][chosen_feature].to_numpy())\n",
-    "data = normalize_data(data)\n",
+    "# sequences\n",
+    "seqs = gen_data_dict('sequence_label_data/signals.gz')\n",
     "\n",
+    "# target \n",
     "target_df_1 = pd.read_csv('learning_data/target_lambda_fold1.csv')\n",
     "target_df_2 = pd.read_csv('learning_data/target_lambda_fold2.csv')\n",
     "\n",
@@ -84,26 +70,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the RNN model\n",
+    "class RNNModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(RNNModel, self).__init__()\n",
+    "        self.rnn = nn.RNN(input_size=1, hidden_size=8, num_layers=1, nonlinearity='tanh', bias=True, batch_first=False)\n",
+    "        self.fc1 = nn.Linear(8, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        _, x = self.rnn(x)\n",
+    "        x    = self.fc1(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_df   = pd.read_csv('learning_data/seq_features.csv')\n",
-    "# target_df = pd.read_csv('learning_data/target_lambda_bothfold.csv')\n",
+    "# # Instantiate the model, define custom loss function, and optimizer\n",
+    "# model = RNNModel()\n",
     "\n",
-    "# n_train = 300\n",
+    "# squared_hinge_loss = SquaredHingeLoss()\n",
+    "# optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# # train data\n",
-    "# data = torch.FloatTensor(data_df.iloc[:n_train, 1:].to_numpy())\n",
-    "# data = normalize_data(data)\n",
-    "# targets_1 = torch.FloatTensor(target_df.iloc[:n_train, 1:2].to_numpy())\n",
-    "# targets_2 = torch.FloatTensor(target_df.iloc[:n_train, 2:3].to_numpy())\n",
-    "\n",
-    "# # test_data\n",
-    "# data_test = torch.FloatTensor(data_df.iloc[n_train:, 1:].to_numpy())\n",
-    "# data_test = normalize_data(data_test)\n",
-    "# targets_test_1 = torch.FloatTensor(target_df.iloc[n_train:, 1:2].to_numpy())\n",
-    "# targets_test_2 = torch.FloatTensor(target_df.iloc[n_train:, 2:3].to_numpy())"
+    "# # Training loop\n",
+    "# record_loss_test = []\n",
+    "# min_loss_test = float('inf')\n",
+    "# for epoch in range(1000):\n",
+    "#     # Forward pass\n",
+    "#     output = torch.tensor([[0.0]])\n",
+    "#     for i in range(len(seqs)):\n",
+    "#         seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
+    "#         output += model(seq)\n",
+    "    \n",
+    "#     # Compute the custom loss\n",
+    "#     loss = squared_hinge_loss(output, targets_low_1, targets_high_1)\n",
+    "#     loss_test = squared_hinge_loss(output, targets_low_2, targets_high_2)\n",
+    "    \n",
+    "#     # Print the loss\n",
+    "#     if (epoch) % 1 == 0:\n",
+    "#         print(f'Epoch {epoch:5d}, Loss_1: {loss.item():8.4f}, Loss_1_test: {loss_test.item():8.4f}')\n",
+    "    \n",
+    "#     # Backward pass and optimization\n",
+    "#     optimizer.zero_grad()\n",
+    "#     loss.backward()\n",
+    "#     optimizer.step()"
    ]
   },
   {
@@ -112,45 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the deep learning model\n",
-    "class MyModel(nn.Module):\n",
-    "    def __init__(self, input_size):\n",
-    "        super(MyModel, self).__init__()\n",
-    "        self.fc1 = nn.Linear(input_size, 4)\n",
-    "        self.fc2 = nn.Linear(4, 1)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = torch.relu(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch     0, Loss_1:   1.7715, Loss_1_test:   1.8661, Loss_2:   1.8207, Loss_2_test:   1.2023\n",
-      "Epoch   100, Loss_1:   1.3177, Loss_1_test:   1.5205, Loss_2:   1.5279, Loss_2_test:   1.0895\n",
-      "Epoch   200, Loss_1:   1.0983, Loss_1_test:   1.3473, Loss_2:   1.4283, Loss_2_test:   1.0693\n",
-      "Epoch   300, Loss_1:   1.0313, Loss_1_test:   1.3128, Loss_2:   1.3716, Loss_2_test:   1.0608\n",
-      "Epoch   400, Loss_1:   1.0221, Loss_1_test:   1.3212, Loss_2:   1.3277, Loss_2_test:   1.0527\n",
-      "Epoch   500, Loss_1:   1.0188, Loss_1_test:   1.3240, Loss_2:   1.2875, Loss_2_test:   1.0479\n",
-      "Epoch   600, Loss_1:   1.0161, Loss_1_test:   1.3234, Loss_2:   1.2679, Loss_2_test:   1.0510\n",
-      "Epoch   700, Loss_1:   1.0142, Loss_1_test:   1.3248, Loss_2:   1.2595, Loss_2_test:   1.0565\n",
-      "Epoch   800, Loss_1:   1.0136, Loss_1_test:   1.3251, Loss_2:   1.2534, Loss_2_test:   1.0608\n",
-      "Epoch   900, Loss_1:   1.0136, Loss_1_test:   1.3239, Loss_2:   1.2476, Loss_2_test:   1.0638\n"
-     ]
-    }
-   ],
-   "source": [
     "# Instantiate the model, define custom loss function, and optimizer\n",
-    "model1 = MyModel(input_size = data.shape[1])\n",
-    "model2 = MyModel(input_size = data.shape[1])\n",
+    "model1 = RNNModel()\n",
+    "model2 = RNNModel()\n",
     "\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
     "optimizer1 = optim.Adam(model1.parameters(), lr=0.001)\n",
@@ -163,8 +144,12 @@
     "min_loss_2_test = float('inf')\n",
     "for epoch in range(1000):\n",
     "    # Forward pass\n",
-    "    outputs1 = model1(data)\n",
-    "    outputs2 = model2(data)\n",
+    "    outputs1 = torch.tensor([[0.0]])\n",
+    "    outputs2 = torch.tensor([[0.0]])\n",
+    "    for i in range(len(seqs)):\n",
+    "        seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
+    "        outputs1 += model1(seq)\n",
+    "        outputs2 += model2(seq)\n",
     "    \n",
     "    # Compute the custom loss\n",
     "    loss_1 = squared_hinge_loss(outputs1, targets_low_1, targets_high_1)\n",
@@ -188,11 +173,11 @@
     "    # save models\n",
     "    if loss_1_test < min_loss_1_test:\n",
     "        min_loss_1_test = loss_1_test\n",
-    "        torch.save(model1.state_dict(), 'saved_models/model1_best.pth')\n",
+    "        torch.save(model1.state_dict(), 'saved_models/model1_rnn_best.pth')\n",
     "    \n",
     "    if loss_2_test < min_loss_2_test:\n",
     "        min_loss_2_test = loss_2_test\n",
-    "        torch.save(model2.state_dict(), 'saved_models/model2_best.pth')\n",
+    "        torch.save(model2.state_dict(), 'saved_models/model2_rnn_best.pth')\n",
     "    \n",
     "    # Print the loss every 100 epochs\n",
     "    if (epoch) % 100 == 0:\n",
@@ -201,68 +186,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MyModel(\n",
-       "  (fc1): Linear(in_features=3, out_features=4, bias=True)\n",
-       "  (fc2): Linear(in_features=4, out_features=1, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load model1\n",
-    "model1 = MyModel(input_size=data.shape[1])\n",
-    "model1.load_state_dict(torch.load('saved_models/model1_best.pth'))\n",
+    "model1 = RNNModel()\n",
+    "model1.load_state_dict(torch.load('saved_models/model1_rnn_best.pth'))\n",
     "model1.eval()  # Set the model to evaluation mode\n",
     "\n",
     "# Load model2\n",
-    "model2 = MyModel(input_size=data.shape[1])\n",
-    "model2.load_state_dict(torch.load('saved_models/model2_best.pth'))\n",
+    "model2 = RNNModel()\n",
+    "model2.load_state_dict(torch.load('saved_models/model2_rnn_best.pth'))\n",
     "model2.eval()  # Set the model to evaluation mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loss for fold 2:  1.3113869428634644\n",
-      "loss for fold 1:  1.047221064567566\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"loss for fold 2: \",squared_hinge_loss(model1(data), targets_low_2, targets_high_2).item())\n",
-    "print(\"loss for fold 1: \",squared_hinge_loss(model2(data), targets_low_1, targets_high_1).item())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "ldas1 = np.zeros(len(seqs))\n",
+    "ldas2 = np.zeros(len(seqs))\n",
     "with torch.no_grad():\n",
-    "    ldas1 = model1(data).numpy().reshape(-1)\n",
-    "    ldas2 = model2(data).numpy().reshape(-1)"
+    "    for i in range(len(seqs)):\n",
+    "        seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
+    "        ldas1[i] = model1(seq).numpy().reshape(-1)\n",
+    "        ldas2[i] = model2(seq).numpy().reshape(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +251,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/deep_2.csv', header, row)"
+    "    write_to_csv('learning_output/rnn.csv', header, row)"
    ]
   }
  ],
