--- a/lambda_learning_RNN_relu.ipynb
+++ b/lambda_learning_RNN_relu.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x21e7f0afcd0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -30,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +67,7 @@
     "class RNNModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(RNNModel, self).__init__()\n",
-    "        self.rnn = nn.RNN(input_size=1, hidden_size=8, num_layers=1, nonlinearity='tanh', bias=True, batch_first=False)\n",
+    "        self.rnn = nn.RNN(input_size=1, hidden_size=8, num_layers=1, nonlinearity='relu', bias=True, batch_first=False)\n",
     "        self.fc1 = nn.Linear(8, 1)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -120,6 +109,10 @@
     "    loss_2 = squared_hinge_loss(outputs2, targets_low_2, targets_high_2)\n",
     "    loss_1_test = squared_hinge_loss(outputs1, targets_low_2, targets_high_2)\n",
     "    loss_2_test = squared_hinge_loss(outputs2, targets_low_1, targets_high_1)\n",
+    "\n",
+    "    # Print the loss every epochs\n",
+    "    if (epoch) % 1 == 0:\n",
+    "        print(f'Epoch {epoch:5d}, Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')\n",
     "    \n",
     "    # Backward pass and optimization\n",
     "    optimizer1.zero_grad()\n",
@@ -137,51 +130,33 @@
     "    # save models\n",
     "    if loss_1_test < min_loss_1_test:\n",
     "        min_loss_1_test = loss_1_test\n",
-    "        torch.save(model1.state_dict(), 'saved_models/model1_rnn_best.pth')\n",
+    "        torch.save(model1.state_dict(), 'saved_models/model1_rnn_relu_best.pth')\n",
     "    \n",
     "    if loss_2_test < min_loss_2_test:\n",
     "        min_loss_2_test = loss_2_test\n",
-    "        torch.save(model2.state_dict(), 'saved_models/model2_rnn_best.pth')\n",
-    "    \n",
-    "    # Print the loss every 100 epochs\n",
-    "    if (epoch) % 1 == 0:\n",
-    "        print(f'Epoch {epoch:5d}, Loss_1: {loss_1.item():8.4f}, Loss_1_test: {loss_1_test.item():8.4f}, Loss_2: {loss_2.item():8.4f}, Loss_2_test: {loss_2_test.item():8.4f}')"
+    "        torch.save(model2.state_dict(), 'saved_models/model2_rnn_relu_best.pth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RNNModel(\n",
-       "  (rnn): RNN(1, 8)\n",
-       "  (fc1): Linear(in_features=8, out_features=1, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load model1\n",
     "model1 = RNNModel()\n",
-    "model1.load_state_dict(torch.load('saved_models/model1_rnn_best.pth'))\n",
+    "model1.load_state_dict(torch.load('saved_models/model1_rnn_relu_best.pth'))\n",
     "model1.eval()  # Set the model to evaluation mode\n",
     "\n",
     "# Load model2\n",
     "model2 = RNNModel()\n",
-    "model2.load_state_dict(torch.load('saved_models/model2_rnn_best.pth'))\n",
+    "model2.load_state_dict(torch.load('saved_models/model2_rnn_relu_best.pth'))\n",
     "model2.eval()  # Set the model to evaluation mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +204,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/rnn.csv', header, row)"
+    "    write_to_csv('learning_output/rnn_relu.csv', header, row)"
    ]
   }
  ],
