--- a/error_rate.ipynb
+++ b/error_rate.ipynb
@@ -19,7 +19,6 @@
     "linear_svm_df = pd.read_csv('learning_output/linear_SVM.csv')\n",
     "linear_gd_df  = pd.read_csv('learning_output/linear_GD.csv')\n",
     "deep_df       = pd.read_csv('learning_output/deep.csv')\n",
-    "deep2_df      = pd.read_csv('learning_output/deep_2.csv')\n",
     "rnn_df        = pd.read_csv('learning_output/rnn.csv')"
    ]
   },
@@ -36,13 +35,12 @@
       "method: linear-svm \t fold1.test: 76.46 \t fold2.test: 65.96\n",
       "method:  linear-gd \t fold1.test: 76.60 \t fold2.test: 66.15\n",
       "method:       deep \t fold1.test: 81.91 \t fold2.test: 73.85\n",
-      "method:      deep2 \t fold1.test: 80.80 \t fold2.test: 72.25\n",
       "method:        rnn \t fold1.test: 82.31 \t fold2.test: 74.42\n"
      ]
     }
    ],
    "source": [
-    "for df in [BIC_df, linear_svm_df, linear_gd_df, deep_df, deep2_df, rnn_df]:\n",
+    "for df in [BIC_df, linear_svm_df, linear_gd_df, deep_df, rnn_df]:\n",
     "    if(df is BIC_df):\n",
     "        method = \"BIC\"\n",
     "    elif(df is linear_svm_df):\n",
@@ -51,8 +49,6 @@
     "        method = \"linear-gd\"\n",
     "    elif(df is deep_df):\n",
     "        method = \"deep\"\n",
-    "    elif(df is deep2_df):\n",
-    "        method = \"deep2\"\n",
     "    elif(df is rnn_df):\n",
     "        method = \"rnn\"\n",
     "\n",
