--- a/lambda_learning_DeepLearning.ipynb
+++ b/lambda_learning_DeepLearning.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x16e755b7330>"
+       "<torch._C.Generator at 0x2d2ffd2fcd0>"
       ]
      },
      "execution_count": 1,
@@ -22,7 +22,7 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, L, trace_back, error_count, write_to_csv, opart\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart, SquaredHingeLoss\n",
     "\n",
     "np.random.seed(4)\n",
     "torch.manual_seed(4)"
@@ -31,22 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Custom loss function\n",
-    "margin = 1\n",
-    "class SquaredHingeLoss(nn.Module):\n",
-    "    def forward(self, predicted, low, high):\n",
-    "        low  = low + margin\n",
-    "        high = high - margin\n",
-    "        loss = torch.relu(low - predicted) + torch.relu(predicted - high)\n",
-    "        return torch.mean(torch.square(loss), dtype=torch.float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,31 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_df   = pd.read_csv('learning_data/seq_features.csv')\n",
-    "# target_df = pd.read_csv('learning_data/target_lambda_bothfold.csv')\n",
-    "\n",
-    "# n_train = 300\n",
-    "\n",
-    "# # train data\n",
-    "# data = torch.FloatTensor(data_df.iloc[:n_train, 1:].to_numpy())\n",
-    "# data = normalize_data(data)\n",
-    "# targets_1 = torch.FloatTensor(target_df.iloc[:n_train, 1:2].to_numpy())\n",
-    "# targets_2 = torch.FloatTensor(target_df.iloc[:n_train, 2:3].to_numpy())\n",
-    "\n",
-    "# # test_data\n",
-    "# data_test = torch.FloatTensor(data_df.iloc[n_train:, 1:].to_numpy())\n",
-    "# data_test = normalize_data(data_test)\n",
-    "# targets_test_1 = torch.FloatTensor(target_df.iloc[n_train:, 1:2].to_numpy())\n",
-    "# targets_test_2 = torch.FloatTensor(target_df.iloc[n_train:, 2:3].to_numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,8 +76,8 @@
     "class MyModel(nn.Module):\n",
     "    def __init__(self, input_size):\n",
     "        super(MyModel, self).__init__()\n",
-    "        self.fc1 = nn.Linear(input_size, 4)\n",
-    "        self.fc2 = nn.Linear(4, 1)\n",
+    "        self.fc1 = nn.Linear(input_size, 8)\n",
+    "        self.fc2 = nn.Linear(8, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
@@ -127,23 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch     0, Loss_1:   1.7715, Loss_1_test:   1.8661, Loss_2:   1.8207, Loss_2_test:   1.2023\n",
-      "Epoch   100, Loss_1:   1.3177, Loss_1_test:   1.5205, Loss_2:   1.5279, Loss_2_test:   1.0895\n",
-      "Epoch   200, Loss_1:   1.0983, Loss_1_test:   1.3473, Loss_2:   1.4283, Loss_2_test:   1.0693\n",
-      "Epoch   300, Loss_1:   1.0313, Loss_1_test:   1.3128, Loss_2:   1.3716, Loss_2_test:   1.0608\n",
-      "Epoch   400, Loss_1:   1.0221, Loss_1_test:   1.3212, Loss_2:   1.3277, Loss_2_test:   1.0527\n",
-      "Epoch   500, Loss_1:   1.0188, Loss_1_test:   1.3240, Loss_2:   1.2875, Loss_2_test:   1.0479\n",
-      "Epoch   600, Loss_1:   1.0161, Loss_1_test:   1.3234, Loss_2:   1.2679, Loss_2_test:   1.0510\n",
-      "Epoch   700, Loss_1:   1.0142, Loss_1_test:   1.3248, Loss_2:   1.2595, Loss_2_test:   1.0565\n",
-      "Epoch   800, Loss_1:   1.0136, Loss_1_test:   1.3251, Loss_2:   1.2534, Loss_2_test:   1.0608\n",
-      "Epoch   900, Loss_1:   1.0136, Loss_1_test:   1.3239, Loss_2:   1.2476, Loss_2_test:   1.0638\n"
+      "Epoch     0, Loss_1:   1.2396, Loss_1_test:   1.6387, Loss_2:   1.8116, Loss_2_test:   1.4346\n",
+      "Epoch   100, Loss_1:   1.0846, Loss_1_test:   1.4331, Loss_2:   1.5040, Loss_2_test:   1.2265\n",
+      "Epoch   200, Loss_1:   1.0410, Loss_1_test:   1.3202, Loss_2:   1.3852, Loss_2_test:   1.2062\n",
+      "Epoch   300, Loss_1:   1.0247, Loss_1_test:   1.2953, Loss_2:   1.3280, Loss_2_test:   1.1782\n",
+      "Epoch   400, Loss_1:   1.0151, Loss_1_test:   1.3015, Loss_2:   1.2668, Loss_2_test:   1.1328\n",
+      "Epoch   500, Loss_1:   1.0125, Loss_1_test:   1.3071, Loss_2:   1.2239, Loss_2_test:   1.1104\n",
+      "Epoch   600, Loss_1:   1.0113, Loss_1_test:   1.3095, Loss_2:   1.2077, Loss_2_test:   1.1031\n",
+      "Epoch   700, Loss_1:   1.0102, Loss_1_test:   1.3128, Loss_2:   1.2019, Loss_2_test:   1.0994\n",
+      "Epoch   800, Loss_1:   1.0094, Loss_1_test:   1.3135, Loss_2:   1.1979, Loss_2_test:   1.0974\n",
+      "Epoch   900, Loss_1:   1.0087, Loss_1_test:   1.3133, Loss_2:   1.1945, Loss_2_test:   1.0982\n"
      ]
     }
    ],
@@ -201,19 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "MyModel(\n",
-       "  (fc1): Linear(in_features=3, out_features=4, bias=True)\n",
-       "  (fc2): Linear(in_features=4, out_features=1, bias=True)\n",
+       "  (fc1): Linear(in_features=3, out_features=8, bias=True)\n",
+       "  (fc2): Linear(in_features=8, out_features=1, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,15 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss for fold 2:  1.3113869428634644\n",
-      "loss for fold 1:  1.047221064567566\n"
+      "loss for fold 2:  1.2906907796859741\n",
+      "loss for fold 1:  1.0973103046417236\n"
      ]
     }
    ],
@@ -251,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +246,8 @@
     "    # run each lambda and record it into csv file\n",
     "    row  = [i, fold1_total_labels, fold2_total_labels]\n",
     "\n",
-    "    chpnt_fold1 = opart(10**ldas2[i], sequence, y, z)\n",
-    "    chpnt_fold2 = opart(10**ldas1[i], sequence, y, z)\n",
+    "    chpnt_fold1 = opart(10**ldas2[i], sequence)\n",
+    "    chpnt_fold2 = opart(10**ldas1[i], sequence)\n",
     "\n",
     "    err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
@@ -295,7 +255,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/deep_2.csv', header, row)"
+    "    write_to_csv('learning_output/deep.csv', header, row)"
    ]
   }
  ],
