--- a/lambda_learning_linear_SVM.ipynb
+++ b/lambda_learning_linear_SVM.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "from sklearn import svm\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, error_count, write_to_csv, opart"
    ]
   },
   {
@@ -99,8 +99,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-4.30758687  1.48571781] [1.2276348]\n",
-      "[-3.3155771   1.59965473] [1.46673969]\n"
+      "[-4.31  1.49] [1.23]\n",
+      "[-3.32  1.6 ] [1.47]\n"
      ]
     }
    ],
@@ -203,9 +203,6 @@
     "    sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
     "    sequence_length = len(sequence)-1\n",
     "\n",
-    "    # vectors of cumulative sums\n",
-    "    y, z = get_cumsum(sequence)\n",
-    "\n",
     "    # calculate lambda\n",
     "    lda_test_fold2 = linear_func(np.log10(np.log10(sequence_length)), svc_train_fold1)\n",
     "    lda_test_fold1 = linear_func(np.log10(np.log10(sequence_length)), svc_train_fold2)\n",
@@ -217,8 +214,8 @@
     "    # run each lambda and record it into csv file\n",
     "    row  = [i, fold1_total_labels, fold2_total_labels]\n",
     "\n",
-    "    chpnt_fold1 = opart(10**lda_test_fold1, sequence, y, z)\n",
-    "    chpnt_fold2 = opart(10**lda_test_fold2, sequence, y, z)\n",
+    "    chpnt_fold1 = opart(10**lda_test_fold1, sequence)\n",
+    "    chpnt_fold2 = opart(10**lda_test_fold2, sequence)\n",
     "\n",
     "    err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
