--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -472,6 +472,25 @@
     "#     chpnt = lopart(toy_sequence, neg_start, neg_end, pos_start, pos_end, lda)\n",
     "#     print(plot_sequence(toy_sequence, neg_start, neg_end, pos_start, pos_end, 'LOPART', chpnt, lda))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Custom loss function\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class SquaredHingeLoss(nn.Module):\n",
+    "    def forward(self, predicted, low, high):\n",
+    "        margin = 1\n",
+    "        loss_low  = torch.relu(low  - predicted + margin)*torch.sign(low + 5)\n",
+    "        loss_high = torch.relu(predicted - high + margin)*torch.sign(5 - high)\n",
+    "        loss = loss_low + loss_high\n",
+    "        return torch.mean(torch.square(loss), dtype=torch.float)"
+   ]
   }
  ],
  "metadata": {
