--- a/lambda_learning_linear_GD.ipynb
+++ b/lambda_learning_linear_GD.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1acfd6bb330>"
+       "<torch._C.Generator at 0x2576a0afcd0>"
       ]
      },
      "execution_count": 1,
@@ -22,7 +22,7 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart, SquaredHingeLoss\n",
     "\n",
     "np.random.seed(123)\n",
     "torch.manual_seed(123)"
@@ -31,22 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Custom loss function\n",
-    "margin = 1\n",
-    "class SquaredHingeLoss(nn.Module):\n",
-    "    def forward(self, predicted, low, high):\n",
-    "        low  = low + margin\n",
-    "        high = high - margin\n",
-    "        loss = torch.relu(low - predicted) + torch.relu(predicted - high)\n",
-    "        return torch.mean(torch.square(loss), dtype=torch.float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +165,8 @@
     "    # run each lambda and record it into csv file\n",
     "    row  = [i, fold1_total_labels, fold2_total_labels]\n",
     "\n",
-    "    chpnt_fold1 = opart(10**ldas2[i], sequence, y, z)\n",
-    "    chpnt_fold2 = opart(10**ldas1[i], sequence, y, z)\n",
+    "    chpnt_fold1 = opart(10**ldas2[i], sequence)\n",
+    "    chpnt_fold2 = opart(10**ldas1[i], sequence)\n",
     "\n",
     "    err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
     "    err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
